--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-fill layout-align="top center" flex>
 
-  <md-content>
+  <md-content flex>
     <div> Sort By:
       <select>
         <option value="" class="" selected="selected">Select Sort Option:</option>
