--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -13,10 +13,27 @@
 </button>
 <input type="search" name="search" ng-model="search" md-maxlength="10">
 <span flex></span>
-<button md-button><i md-icon>settings</i>Orders</button>
+<md-button md-button class="md-warn" >
+  <md-icon><i md-icon>settings</i></md-icon>
+  Orders
+</md-button>
+<md-button md-button class="md-warn" >
+  <md-icon><i md-icon>settings</i></md-icon>
+  Leads
+</md-button>
+<md-button md-button class="md-warn" >
+  <md-icon><i md-icon>settings</i></md-icon>
+  Dashboard
+</md-button>
+<md-button md-button class="md-warn" >
+  <md-icon><i md-icon>settings</i></md-icon>
+  History
+</md-button>
+
+<!--<button md-button><i md-icon>settings</i>Orders</button>
 <button md-button><i md-icon>settings</i>Leads</button>
 <button md-button><i md-icon>settings</i>Dashboard</button>
-<button md-button><i md-icon>settings</i>History</button>
+<button md-button><i md-icon>settings</i>History</button>-->
 <button md-button class="md-icon-button" aria-label="Settings" (click)="open('right')">
   <i class="green" md-icon>settings</i>
 </button>
