--- a/src/app/share/components/left-navigation.component.html
+++ b/src/app/share/components/left-navigation.component.html
@@ -1,13 +1,15 @@
-<h2>Order App</h2>
-<h3>Comfort Agencies</h3>
-<img class="logo" src="app/share/images/logo.jpg">
-<h3>Swapnil Kadam</h3>
-<img src="app/share/images/profile.png">
-<ul>
-  <li><a [routerLink]="['/Inbox']">My Orders</a></li>
-  <li><a [routerLink]="['/UserAccount']">User Account</a></li>
-  <li><a [routerLink]="['/UserAccount']">Notes</a></li>
-  <li><a [routerLink]="['/Products']">Products</a></li>
-  <li><a [routerLink]="['/Customers']">Customers</a></li>
-  <li><a [routerLink]="['/LogOut']">Log Out</a></li>
-</ul>
+<div layout="column" layout-align="center center">
+  <h1><img class="logo" src="app/share/images/logo.png"></h1>
+  <h2><img src="app/share/images/profile.png"></h2>
+  <h3>Swapnil Kadam</h3>
+  <ul>
+    <li><a [routerLink]="['/Inbox']">My Orders</a></li>
+    <li><a [routerLink]="['/UserAccount']">User Account</a></li>
+    <li><a [routerLink]="['/UserAccount']">Notes</a></li>
+    <li><a [routerLink]="['/Products']">Products</a></li>
+    <li><a [routerLink]="['/Customers']">Customers</a></li>
+    <li><a [routerLink]="['/LogOut']">Log Out</a></li>
+  </ul>
+</div>
+
+
