UI changes for left section and inbox section

--- a/src/app/inbox-app.css
+++ b/src/app/inbox-app.css
@@ -1,4 +1,4 @@
-md-sidenav.sidenav  {
+md-sidenav.leftnav  {
   background-image: url("../app/share/images/dock-bg.png");
   background-repeat: no-repeat;
   background-size:100% 100%;
