--- a/src/app/share/components/left-navigation.component.css
+++ b/src/app/share/components/left-navigation.component.css
@@ -1,17 +1,45 @@
-.leftmenu {
-  padding: 0px;
-}
-.leftmenu .name {
-  color:#ffffff;
-  text-decoration: none;
-}
-.leftmenu li:hover {
-  background-color: #3B4549;
-}
-.md-warn {
-  width: 150px;
-}
-h3 {
+.leftarea h3 {
   color: #ffffff;
   font-weight: 200;
+}
+.leftarea ul {
+  padding: 0px;
+  margin: 20px 0px;
+}
+.leftarea ul li:hover {
+  background-color: #3B4549;
+}
+.leftarea ul li.selected{
+  background-color: #3B4549;
+  border-left: 3px solid #F36523;
+}
+.leftarea ul li:last-child {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+}
+.leftarea .md-warn {
+  width: 150px;
+  background: #F36523;
+}
+.leftarea .md-avatar{
+  width: 100px;
+  height: 100px;
+}
+.leftarea .md-mini {
+  position: absolute;
+  margin: 10px;
+  width: 20px;
+  height: 20px;
+  right: 0;
+  background: #F36523;
+}
+.leftarea span.count {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 0;
+  top: 0;
+  font-size: 10px;
+  line-height: 21px;
 }
