--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-fill layout-align="top center" flex>
   <md-content flex>
     <div class="assign-order" layout="row" >
-      <span layout-padding> Sort By: </span>
+      <span> Sort By: </span>
       <div layout="row" flex >
         <select>
           <option value="" class="" selected="selected">Select Sort Option:</option>
@@ -13,12 +13,12 @@
         </select>
       </div>
       <div layout="row" layout-align="end none" >
-        <span layout-padding>Leads</span>
-        <md-switch layout-padding flex layout-fill  aria-label="Switch 1"></md-switch>
+        <span> Leads </span>
+        <md-switch flex layout-fill  aria-label="Switch 1"></md-switch>
       </div>
     </div>
 
-    <md-list class="inbox-list" layout-padding>
+    <md-list class="inbox-list">
       <div *ngFor="#item of itemList">
         <ib-email-compact-view [email]="item" *ngIf="item.type == 'Email'" (click)="showDetails = !showDetails"></ib-email-compact-view>
         <iframe src="app/inbox/images/LicenseCertificate.pdf" *ngIf="showDetails == true" style="width:600px; height:500px;" frameborder="0"></iframe>
