--- a/src/app/inbox/item-views/order-compact-view.html
+++ b/src/app/inbox/item-views/order-compact-view.html
@@ -1,15 +1,19 @@
 <md-list-item class="md-3-line">
+  <div [ngClass]="{pending: isPending, inProgress: isInProgress, complete : isComplete}"> </div>
   <div class="client-section">
     <span><img src="app/inbox/images/mobile-app.png"> </span>
     <img [src]="'app/share/images/company-logo/'+order.fromCompany + '.png'" class="md-avatar client-img" alt="{{order.companyName}}"/>
   </div>
   <div class="md-list-item-text" layout="column">
     <h3>{{ order.orderDetails }}</h3>
-    <h4>{{ order.orderDate | date }}</h4>
+    <!--<h4>{{ order.orderDate | date }}</h4>-->
     <p>{{ order.orderType }}</p>
-    <p>{{ order.defaultTask.status }}</p>
-    <p>{{ order.type }}</p>
+    <!--<p>{{ order.defaultTask.status }}</p>-->
     <p>{{ order.defaultTask.assignedTo }}</p>
   </div>
-  <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
+  <md-list-item class="md-2-line user-avtar">
+    <img [src]="'app/share/images/avtars/'+order.defaultTask.assignedTo + '.jpg'" class="md-avatar" alt="{{order.defaultTask.assignedTo}}"/>
+    <span flex> 25min </span>
+  </md-list-item>
+  <p class="delivery-date">Delivery by {{ order.orderDate | date }}</p>
 </md-list-item>
