--- a/src/app/inbox/item-views/audio-compact-view.css
+++ b/src/app/inbox/item-views/audio-compact-view.css
@@ -1,11 +1,44 @@
 .client-img{
   padding: 10px;
   border:1px solid #b7b7b7;
-}.client-section {
-   position: relative;
- }
+  margin:5px 20px 0px 30px;
+}
+.client-section {
+  position: relative;
+}
 .client-section span img {
   position: absolute;
-  right: 15px;
+  right: 16px;
   top: 8px;
+}
+.pending{
+  position: absolute;
+  left: 0px;
+  height: 96%;
+  width: 5px;
+  background: red;
+}
+.delivery-date{
+  position: absolute;
+  right: 10px;
+  bottom: 5px;
+  font-size: 11px;
+  text-align: right;
+  background: lemonchiffon;
+}
+.user-avtar {
+  margin-right: 10px;
+}
+.user-avtar span {
+  padding: 15px 0;
+  font-size: 11px;
+}
+md-list-item.md-3-line {
+  min-height: inherit;
+}
+md-list-item.selected {
+  background: #EAEAEA;
+}
+audio {
+  width: 80%;
 }
